syntax = "proto3";

package namenode_;
option go_package = 	"go-fs/proto/namenode";

service NameNodeService {
  rpc GetBlockSize(GetBlockSizeRequest) returns (GetBlockSizeResponse);
  rpc ReadData(ReadRequst) returns (ReadResponse);
  rpc WriteData(WriteRequest) returns (WriteResponse);
  rpc DeleteData(DeleteDataReq) returns (DeleteDataResp);
  rpc StatData(StatDataReq) returns (StatDataResp);
  rpc GetDataNodes(GetDataNodesReq) returns (GetDataNodesResp);
  rpc IsDir(IsDirReq) returns (IsDirResp);
  rpc Rename(RenameReq) returns (RenameResp);
}

message RenameReq {
  string OldFileName = 1;
  string NewFileName = 2;
}

message RenameResp {
  bool Success = 1;
}

message IsDirReq {
  string Filename = 1;
}

message IsDirResp {
  bool Ok = 1;
}

message GetDataNodesReq {
}

message GetDataNodesResp {
  repeated string DataNodeList = 1;
}

message StatDataReq {
  string fileName = 1;
}

message StatDataResp {
  repeated NameNodeMetaData nameNodeMetaDataList = 1;
}

message DeleteDataReq {
  string fileName = 1;
}

message DeleteDataResp {
  repeated NameNodeMetaData nameNodeMetaDataList = 1;
}

message DataNodeInstance {
	string host = 1;
	string servicePort = 2;
}

message NameNodeMetaData{
	string blockId = 1;
	repeated DataNodeInstance blockAddresses = 2;
}

message GetBlockSizeRequest {
  bool request = 1;
}

message GetBlockSizeResponse {
  uint64 blockSize = 1;
}

message ReadRequst {
	string fileName = 1;
}

message ReadResponse {
  repeated NameNodeMetaData nameNodeMetaDataList = 1;
}

message WriteRequest {
	string fileName = 1;
	uint64 fileSize = 2;
}

message WriteResponse {
  repeated NameNodeMetaData nameNodeMetaDataList = 1;
}
